/***********************************************************************
X3 ChangeLog

2007-02-08  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: Filling in ldap support for all password related
	operations: cmd_pass, loc_auth, etc.

2007-02-09  Neil Spierling  <sirvulcan@gmail.com>

	* tools/ldap/ldap_convert.php: Few tweaks.

2007-02-08  Alex Schumann  <rubin@afternet.org>

	* tools/ldap/inetorganon.schema: Scheme for ldap.

	* tools/ldap/ldap_convert.php: Conversion script for converting
	x3 users to the ldap server.

2007-02-07  Alex Schumann  <rubin@afternet.org>

	* configure.in: adding compile/configure support for ssl libs (not
	        yet needed)

	* configure: updated from above.

	* src/config.h.in: adding compile/configure support for ssl libs (not
	yet needed)

	* src/x3ldap.c: ldap crypted password pain. SUpport for object classes
	in config file.

	* src/x3ldap.h: ldap crypted password pain. Support for object classes
	in config file.

	* src/nickserv.c: change password in ldap when its changed in
	nickserv. Support for object classes in config file.
	
	* src/nickserv.h: support for object classes in conf file

2007-02-07  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: improve error result feedback

	* src/nickserv.c: improve error result feedback (oops, fix for if
	ldap_enable is 0)

2007-02-07  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: ldap_add functionality

	* src/x3ldap.h: ldap_add functionality

	* src/nickserv.h: ldap_add functionality

	* src/nickserv.c: ldap_add functionality

	* x3.conf.example: ldap_add functionality

2007-02-06  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: fix compiling problem when non-ldap. Compile fixups
	and sanity checks.

        * configure.in: Better ldap library handling **oops ** helps to
	actually have -lldap in LIBS...

	* configure: regenerated from above ** **

	* x3.conf.example: tweaked ldap settings
